--- a/package.json
+++ b/package.json
@@ -7,18 +7,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-screens": "3.31.1",
+    "firebase": "8.10.0",
+    "firebase/app": "8.1.0",
+    "firebase/auth": "8.1.0",
+    "firebase/firestore": "8.1.0",
+    "react-native-screens": "~4.1.0",
     "@react-navigation/stack": "^6.x",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.16.1",
     "@react-navigation/native": "^6.x",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-safe-area-context": "4.10.5",
-    "firebase": "8.1.0"
+    "react-native-safe-area-context": "4.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
